--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "status.js",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "description": "Status widget for Hund.io status pages.",
   "main": "dist/status.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
     "gulp-strip-comments": "^2.4.3",
+    "gulp-watch": "^4.3.11",
     "gutil": "^1.6.4"
   }
 }
