--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "status.js",
-  "version": "2.3.5-compat",
+  "version": "3.4.3",
   "description": "Status widget for Hund.io status pages.",
   "main": "dist/status.js",
   "scripts": {
@@ -27,10 +27,10 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-closure-compiler": "^0.4.0",
-    "gulp-coffee": "^2.3.2",
+    "gulp-coffee": "^2.3.5",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
-    "gulp-strip-comments": "^2.4.3",
+    "gulp-strip-comments": "^2.5.2",
     "gulp-watch": "^4.3.11",
     "gutil": "^1.6.4"
   }
